[package]
name = "cargo-canister"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
log = "0.4.21"
env_logger = "0.11.0"
ra_ap_hir = "0.0.217"
ra_ap_hir_def = "0.0.217"
ra_ap_ide = "0.0.217"
ra_ap_load-cargo = "0.0.217"
ra_ap_paths = "0.0.217"
ra_ap_project_model = "0.0.217"
ra_ap_vfs = "0.0.217"
ra_ap_base_db = "0.0.217"
ra_ap_syntax = "0.0.217"
clap = { version = "4.5.4", features = ["derive"] }
fxhash = "0.2.1"
indicatif = "0.17.8"
console = "0.15.8"
candid_parser = { version = "0.2.0-beta.3" }
toml = { version = "0.8", default-features = false, features = ["parse"] }
serde = "1.0.203"
candid = { version = "0.10.9" }
syn = { version = "2.0", features = ["full", "visit", "extra-traits"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
codespan-reporting = "0.11"
ic-agent = "0.36.0"
tokio = { version = "1.38.0", features = ["full"] }
prettydiff = { version = "0.7.0", default-features = false }

[patch.crates-io]
candid_parser = { git = "https://github.com/dfinity/candid.git", branch = "configs" }
candid = { git = "https://github.com/dfinity/candid.git", branch = "configs" }
ic_principal = { git = "https://github.com/dfinity/candid.git", branch = "configs" }
